# autonomy-bootcamp

./: .gitignore  .pylintrc  AutonomyBoot.ipynb  CIFAR10.ipynb  CIFAR10CVbootcamp.ipynb  CIFAR10_bootcamp.ipynb  CMakeCache.txt  CMakeLists.txt  CNN_on_CIFAR_10.ipynb  CTestTestfile.cmake  CV Bootcamp.ipynb  CV_BOOTCAMP.py  CV_Bootcamp_Het_Patel.ipynb  CV_bootcamp.ipynb  Cifar.ipynb  Cifar_10_Resnet_Transfer.ipynb  Cifar_10_training.ipynb  Classify.ipynb  Code Output.txt  ImageClassificationModel.ipynb  Log.txt  Main.py  Makefile  NN.py  NT_WARG_CV_bootcamp.ipynb  Output.txt  Pipfile  README.md  TerminalOutput.txt  Training_Results.txt  UWARG Pytorch Computer Vision Bootcamp - Gurik Mangat.ipynb  UWARG_Bootcamp.ipynb  UWARG_CB_Bootcamp.ipynb  UWARG_ComputerVisionBootcamp.ipynb  Untitled0.ipynb  Visualize_Data.py  WARG_Bootcamp.ipynb  WARG_CV_Bootcamp.ipynb  WARG_CV_Bootcamp_not_working_file.ipynb  WARG_CV_Bootcamp_working.ipynb  (+74 more)
.ipynb_checkpoints/: CV Bootcamp-checkpoint.ipynb  main-checkpoint.ipynb
Alvin_Bootcamp/: main.py
GraceChen_Bootcamp/: grace_chen_bootcamp.py
UWARG/: model.py  results.txt
UWARG Bootcamp/: UwargTest(good).py
bootcamp/: data_manager.py  main.py  neural_network.py  runner.py
docker/: tf.Dockerfile
image_classifier.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
image_classifier.model/variables/: variables.index
ksisjaya_bootcamp/: main.py
lib/: ImageModel.py  ModelTrainer.py
model/: model.ipynb  model.py
model-code/: .model.py.swp  model.ipynb
model-code/.ipynb_checkpoints/: model-checkpoint.ipynb
model/.ipynb_checkpoints/: model-checkpoint.ipynb
model_stats/model_v3/: model_v3.txt
models/: cifar.pth  cifar_net.pth  model.pth
modules/MergeSort/: CMakeLists.txt
modules/core/: CMakeLists.txt  CTestTestfile.cmake  Makefile  (+2 more)
modules/core/test/: CMakeLists.txt  merge_sort_test.cpp
modules/sort/test/: CMakeCache.txt  CMakeLists.txt  Integer.exp  Integer.in  Large.in  Long.exp  Long.in  Makefile  Negative.exp  cmake_install.cmake  general_test.cpp  long_gen  merge_sort_test.cpp  merge_sort_test_suite.cpp  td_gen  test.cc  test.cpp
modules/sort/test/make/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: config.yml  data_setup.py  dataset.py  engine.py  main.py  model.py  model_builder.py  results.ipynb  train.py  trainer.py  utils.py
testdata/: Large.exp  Large.in  Long.in~  Negative.exp~  Negative.in  suite.txt  td_gen  td_gen~
(+467 files in other folders)
